--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,32 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://cdn.jsdelivr.net/npm/galmuri@latest/dist/galmuri.css');
+
+@import url('https://fonts.cdnfonts.com/css/press-start-2p');
+
+@font-face {
+  font-family: "Galmuri9";
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: 'PressStart2P', sans-serif;
+}
+
+
+html, body, pre, code, kbd, samp {
+  font-family: "Galmuri9";
+}
+
+.App{
+
+}
+
+.main-content .nes-container.is-dark{
+  margin-bottom: 30px;
+}
+
+.PressStart2P{
+  font-family: "PressStart2P";
+}
+
+.em25{
+  font-size: 2.5em;
 }
