feat: 감정이미지 컴포넌트 작업
- 스타일링 및 이미지 추가
- 컴포넌트 작업

--- a/src/component/Editor.css
+++ b/src/component/Editor.css
@@ -12,10 +12,15 @@
     font-size: 20px;
     back-ground-color: #ececec;
     padding: 20px;
-    border-image-repeat: stretch;
+    /*border-image-repeat: stretch;*/
 }
 .Editor .bottom-section {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+.Editor .emotion-list-wrapper {
+    display: flex;
+    justify-content: space-around;
+    gap: 2%;
 }
