--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,7 @@ body{
   max-width: 600px;
   width: 100%;
   min-height: 100vh;
+  padding: 15px;
   height: 100%;
   background-color: white;
   box-shadow: rgba(100,100,100,0.2) 0px 7px 29px 0px;
