feat : 전체 레이아웃 및 css 수정

--- a/src/component/Viewer.css
+++ b/src/component/Viewer.css
@@ -66,8 +66,9 @@
 }
 .content-wrapper {
     width: 100%;
-    background-color: #ececec;
+    background-color: #5ba2ff;
     border-radius: 5px;
+    padding: 3px;
     word-break: keep-all;
     overflow-wrap: break-word;
 }
