--- a/src/component/Button.css
+++ b/src/component/Button.css
@@ -6,6 +6,7 @@
     font-size: 18px;
     white-space: nowrap;
     border-image-repeat: stretch;
+    min-width: 140px;
 }
 .default {
     background-color: #ececec;
