--- a/src/component/DiaryItem.css
+++ b/src/component/DiaryItem.css
@@ -15,6 +15,9 @@
     flex-direction: column;
     font-size: 15px;
 }
+.DiaryItem .img-section .img-wrapper span{
+    text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+}
 
 .DiaryItem .img-section-1 .img-wrapper{
     background-color: #64c964;
@@ -51,5 +54,8 @@
 }
 .DiaryItem .button-section {
     min-width: 70px;
+}
+.button-section Button {
+    margin-left: 10px;
 }
 
