--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@ body{
   min-height: 100vh;
   padding: 15px;
   height: 100%;
-  background-color: white;
+  background-image: url("./assets/img/diary_bg.png");
   box-shadow: rgba(100,100,100,0.2) 0px 7px 29px 0px;
 }
 div {
