--- a/src/component/Header.css
+++ b/src/component/Header.css
@@ -4,7 +4,8 @@
 
     display: flex;
     align-items: center;
-    border-bottom: 1px solid #e2e2e2;
+    border-bottom: 3px solid #e2e2e2;
+    margin-bottom: 3px;
 }
 
 .Header > div {
