--- a/src/component/Editor.css
+++ b/src/component/Editor.css
@@ -2,7 +2,7 @@
     background-color: white;
 }
 
-.Editor .editor-section {
+.Editor > .editor-section {
     margin-bottom: 40px;
 }
 
@@ -35,14 +35,25 @@
     flex-direction: column;
     align-items: self-start
 }
-.Editor .editor-section > .calendar-wrapper input{
+
+.Editor .editor-section > .calendar-wrapper input {
     display: flex;
 }
-.Editor .editor-section > .input-wrapper span{
-   white-space: nowrap;
+
+.Editor .editor-section > .input-wrapper span {
+    white-space: nowrap;
 }
 
 .black-description-box {
     box-shadow: 0 0 0 3px #000;
     min-width: 400px;
+}
+.Editor .editor-section h4{
+    color: black;
+}
+textarea {
+    width: 300px;
+    height: 200px;
+    resize: none;
+    overflow: auto;
 }
