refactor : 기분나쁨 뷰어 이미지 css 위치 조정 추가

--- a/src/component/Viewer.css
+++ b/src/component/Viewer.css
@@ -60,6 +60,9 @@
     background-position: center;
     background-size: cover;
 }
+.emotion-img-wrapper-5 img{
+    padding-top: 90px;
+}
 .black-description-box {
     box-shadow: 0 0 0 3px #000;
     min-width: 400px;
